Changing highlight colour, adding outline, fixing .house element width and making chimney visible.

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
 	-moz-transition: all 0.30s ease-in-out;
 	-ms-transition: all 0.30s ease-in-out;
 	-o-transition: all 0.30s ease-in-out;
-	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+	box-shadow: inset 0 0 2px rgba(238, 81, 81, 1), 0px 0px 5px rgba(238, 81, 81, 1);
+	outline: 1px solid rgba(238, 81, 81, 1);
 }
 
 .line-art {
@@ -19,8 +20,8 @@
 }
 
 .house {
-	margin: 10px;
-	width: 204px;
+	margin: 10% auto;
+	width: 240px;
 	position: relative;
 }
 
@@ -30,7 +31,8 @@
 	border: 2px solid #000;
 	position: absolute;
 	top: 25px;
-	right: 30px;
+	right: 16px;
+	background-color: #fff;
 }
 
 .house .wall{
